@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix problem with render :partial collections, records, and locals. #11057 [lotswholetime] 
+
 * Added support for naming concrete classes in sweeper declarations [DHH]
 
 * Remove ERB trim variables from trace template in case ActionView::Base.erb_trim_mode is changed in the application.  #10098 [tpope, kampers]
